--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
+Django==1.11.25
+django-environ==0.4.5
+isodate==0.6.0
+msgpack==0.5.6
+mysql-connector-python==8.0.16
+MySQL-python==1.2.4b4
+protobuf==3.9.0
+pyparsing==2.4.2
+pytz==2019.3
 rdflib==4.2.2
+scipy==1.1.0
+six==1.12.0
+virtualenv==16.7.7
